# tunePhi

./: README.md  deploy_sagemaker.py  pyproject.toml
dataset/: test.ipynb  test__train_data.json
old/: requirements.txt  run_qlora.py
src/: inference.py  requirements.txt  run_clm.py  upload_dataset_to_s3.py  utils.py
